# sa1rb

./: .gitignore  README.md  pyproject.toml
files/: andreas-gursky.html  buonarotti-sculptures.html  norman-foster-buildings.html  olafur-eliasson.html  van-gogh-paintings-my-attempt.html  van-gogh-paintings-unminified.html
src/sa1rb/: __init__.py  __main__.py  comparison_helpers.py  debug_helpers.py  html_with_artwork_to_json.py  html_with_carousel_to_json.py
tests/test_sa1rb/: test_html_with_artwork_to_json.py
